--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>POFO : Interactive Agency</title>
+  <title>POFO : Interactive Agency - Update</title>
   
   <meta name="format-detection" content="telephone=no">
   <meta name="publisher" content="Lim Hyojeong">
